--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+	<title>Coworking</title>
 </head>
 <body>
-	<h1>Hello world!!!</h1>
+<div class="header">
+	<div class="icons">
+		<img src="./IMG/icons.svg" alt="">
+	</div>
+	<div class="header_contact">
+		<p>OVERVIEW</p>
+		<p>FEATURES</p>
+		<p>CONTACT</p>
+	</div>
+</div>
 </body>
 </html>
