--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./style.css">
 	<title>Coworking</title>
 </head>
 <body>
-<div class="header">
-	<div class="icons">
-		<img src="./IMG/icons.svg" alt="">
-	</div>
-	<div class="header_contact">
-		<p>OVERVIEW</p>
-		<p>FEATURES</p>
-		<p>CONTACT</p>
-	</div>
-</div>
+	<header class="header">
+		<div class="header_top">
+			<div class="icons">
+				<img src="./IMG/icons.svg" alt="">
+			</div>
+			<nav class="header_nav">
+				<p>OVERVIEW</p>
+				<p>FEATURES</p>
+				<p>CONTACT</p>
+			</nav>
+			<div class="title center">
+				<h1 class="titile_content">COWORKING</h1>
+				<p class="sub_title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptatibus aperiam maiores id, incidunt repellendus mollitia </p>
+				<button class="button">Sign Up</button>
+			</div>
+		</div>
+			
+	</header>
+
 </body>
 </html>
